# dvigl

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.txt  howto_win.txt  vcpkg.json
cmake/: 3rdparty.cmake  imgui.cmake
cmake/modules/: FindASSIMP.cmake  FindBullet.cmake  FindGLM.cmake  FindHarfBuzz.cmake  FindIrrXML.cmake  FindOGG.cmake  FindOpus.cmake  FindSDL2.cmake  FindSDL2_gfx.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_net.cmake  FindSDL2_ttf.cmake  FindTHEORA.cmake  FindVPX.cmake  FindVorbis.cmake
docs/: mkdocs.yml
docs/docs/: index.md
docs/overrides/partials/: header.html  source.html
includes/dvigl/: application.h  audio.h  audio_manager.h  camera_node.h  core.h  dir_light_node.h  file_system_manager.h  font.h  font_manager.h  frustum.h  input_manager.h  lod_group.h  lod_group_manager.h  material.h  material_manager.h  mesh.h  model_manager.h  model_node.h  network_manager.h  node.h  particle_system_manager.h  physics_manager.h  point_light_node.h  render_manager.h  scene.h  scene_manager.h  shader.h  shader_manager.h  singleton.h  skinned_mesh.h  skinned_model_node.h  spot_light_node.h  temp_math_3d.h  texture.h  texture_manager.h  video_manager.h
includes/editor/: controller.h  worker.h
includes/glad/: glad.h
includes/webmplay/: OpusVorbisDecoder.h  VPXDecoder.h  WebMDemuxer.h  mkvmuxertypes.h  mkvparser.h  webmids.h
res/materials/: base.dmtl  bob_body.dmtl  bob_face.dmtl  bob_helmet.dmtl  bob_iron_grill.dmtl  bob_round_grill.dmtl  body.dmtl  cratered.dmtl  elvis.dmtl  elvis.yaml  elvis_face.dmtl  flame_head.dmtl  ground.dmtl  head.dmtl  plane.dmtl  plastic.dmtl  suzan_LOD0.dmtl  suzan_LOD1.dmtl  suzan_LOD2.dmtl  suzan_LOD3.dmtl
res/models/: animation.ozz  base.dae  bob.dae  grass.dae  monkey.dae  needle.3ds  plane.dae  sphere.dae  suzan_LOD0.dae  suzan_LOD1.dae  suzan_LOD2.dae  suzan_LOD3.dae  yoda.3ds  yoda.dae
res/scenes/: start.scn
res/shaders/: deferred.glsl  forward.fs  forward.glsl  forward.vs  lighting.fs  lighting.vs  shadowmap.glsl  simple.fs  simple.vs  skinned.fs  skinned.vs  skinned_geometry.glsl  skinned_shadows.glsl  static_geometry.glsl
res/videos/: video.ogv  video.webm
src/: glad.c  theoraplay.c
src/dvigl/: application.cpp  audio.cpp  audio_manager.cpp  camera_node.cpp  dir_light_node.cpp  file_system_manager.cpp  font.cpp  font_manager.cpp  frustum.cpp  input_manager.cpp  lod_group.cpp  lod_group_manager.cpp  main.cpp  material.cpp  material_manager.cpp  mesh.cpp  model_manager.cpp  model_node.cpp  network_manager.cpp  node.cpp  particle_system_manager.cpp  physics_manager.cpp  point_light_node.cpp  render_manager.cpp  scene.cpp  scene_manager.cpp  shader.cpp  shader_manager.cpp  skinned_mesh.cpp  skinned_model_node.cpp  spot_light_node.cpp  temp_math_3d.cpp  texture.cpp  texture_manager.cpp  video_manager.cpp
src/editor/: controller.cpp  editor.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  workerthread.h
src/game/: main.cpp
src/tests/: test_main.cpp
src/webmplay/: OpusVorbisDecoder.cpp  VPXDecoder.cpp  WebMDemuxer.cpp  mkvparser.cpp
